[package]
name = "loterie"
version = "0.1.0"
authors = ["Samuel Ortiz <sameo@linux.intel.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hasard = { git = "https://github.com/sameo/hasard", branch="e86ccb77949c8dde72256b86fe59467ea4740534"}
